# Tofu

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run-cmake-win.cmd
ball-client/: README.md  ball_client.sln  ball_client.vcxproj  ball_client.vcxproj.filters
ball-client/include/tofu/ball/: actions.h  frame_updater.h  game.h  input.h  player.h  player_controller.h  renderer_registerer.h  stage.h
ball-client/include/tofu/ecs/: box2d_primitive_renderer.h
ball-client/include/tofu/renderer/: siv3d.h
ball-client/src/: Main.cpp
ball-client/src/tofu/ball/: actions.cpp  frame_updater.cpp  game.cpp  player.cpp  player_controller.cpp  renderer_registerer.cpp  stage.cpp
ball-client/src/tofu/ecs/: box2d_primitive_renderer.cpp
ball-core/: CMakeLists.txt
ball-core/include/tofu/ball/: actions.h  frame_updater.h  game.h  net_client.h  net_server.h  network.h  player.h  stage.h  sync.h
ball-core/src/: main.cpp
ball-core/src/tofu/ball/: actions.cpp  frame_updater.cpp  game.cpp  net_client.cpp  net_server.cpp  network.cpp  player.cpp  stage.cpp  sync.cpp
ball-server/: CMakeLists.txt
ball-server/src/: main.cpp
ball/ball_client/: ball_client.sln
ball/ball_client/ball_client/: Main.cpp  Tofu.Ball.Game.cpp  Tofu.Ball.Game.h  Tofu.Ecs.Box2DPrimitiveRenderer.cpp  Tofu.Ecs.Box2DPrimitiveRenderer.h  Tofu.Ecs.Core.h  Tofu.Ecs.Physics.cpp  Tofu.Ecs.Physics.h  Tofu.Input.h  Tofu.Renderer.Siv3D.h  Tofu.Renderer.h  Tofu.Utils.cpp  Tofu.Utils.h  ball_client.vcxproj  ball_client.vcxproj.filters
ball/ball_client/ball_client/App/: ball_client(debug)_log.html
cert/: _wildcard.reanisz.info+3-key.pem  _wildcard.reanisz.info+3.pem  ca-crt.pem  ca-crt.srl  ca-csr.pem  ca-privatekey.pem  server-crt.pem  server-csr.pem  server-privatekey.pem
core/: CMakeLists.txt  README.md  build.sh
core-test/: CMakeLists-configure-gtest.txt.in  CMakeLists.txt  README.md  main.cpp
core-test/src/containers/: ring_buffer.cpp  stack_vector.cpp
core-test/src/utils/: circular_queue_allocator.cpp  observer_ptr.cpp  scheduled_update_thread.cpp  service_locator.cpp  strong_numeric.cpp  tvec2.cpp
core/include/: Tofu.Ecs.Core.h  Tofu.Ecs.Physics.h  Tofu.Input.h  Tofu.Renderer.h
core/include/tofu/: containers.h  input.h  renderer.h  utils.h
core/include/tofu/containers/: ring_buffer.h  stack_vector.h  triple_buffer.h
core/include/tofu/ecs/: core.h  physics.h
core/include/tofu/net/: completely_sync.h
core/include/tofu/utils/: circular_queue_allocator.h  error.h  job.h  observer_ptr.h  obsrever_ptr.h  scheduled_update_thread.h  service_locator.h  static_vector.h  strong_numeric.h  temp.h  triple_buffer.h  tvec2.h
core/src/ecs/: physics.cpp
libs/: apply_patches.sh  box2d.patch  picoquic.patch  picotls.patch
libs-build/: build-boringssl-linux.sh  build-boringssl-win.cmd  build-box2d-win.cmd  build-libevent-win.cmd  build-linux-all.sh  build-lsquic-linux.sh  build-lsquic-win.cmd  build-msquic-linux.sh  build-msquic-win.cmd  build-zlib-win.cmd
libs-build/box2d-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  box2d.sln  cmake_install.cmake
libs-build/box2d-win/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  box2d.vcxproj  box2d.vcxproj.filters  box2dConfigVersion.cmake  cmake_install.cmake
libs-build/box2d-win/testbed/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  testbed.vcxproj  testbed.vcxproj.filters
libs-build/box2d-win/unit-test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit_test.vcxproj  unit_test.vcxproj.filters
quic/: CMakeLists.txt  README.md
quic/include/tofu/net/: quic.h  quic_client.h  quic_server.h
quic/src/: quic.cpp  quic_client.cpp  quic_server.cpp
sandbox/: CMakeLists.txt  README.md  main.cpp  quic.cpp  quic.h  quic_server.cpp  quic_server.h
sandbox/include/tofu/net/: quic.h  quic_client.h  quic_server.h
sandbox/src/: main.cpp  quic.cpp  quic_client.cpp  quic_server.cpp
